--- a/stylizedProject/css/style.css
+++ b/stylizedProject/css/style.css
@@ -23,6 +23,15 @@ h2 {
     text-align: center;
 }
 
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 12rem;
+    background-color: #39416e;
+}
+
 .bg-container {
     position: relative;
 }
@@ -96,3 +105,58 @@ h2 {
 .skill-text {
     max-width: 30rem;
 }
+
+.contact-section {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.contact-section button {
+    background-color: #39416e;
+    color:#cfcacf;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-weight: 700;
+    line-height: 2rem;
+    width: 7rem;
+    height:2rem;
+    margin: 3rem auto;
+    border: 0;
+    border-radius: 8%;
+    cursor: pointer;
+    
+}
+
+.contact-section button:hover {
+    background-color: #cfcacf;
+    color: #39416e;
+}
+
+  .link-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 28rem;
+  }
+  
+  .link-container a {
+    flex-basis: 30%;
+    text-align: center;
+    margin: 0 0.5rem;
+    color:#fff;
+    text-decoration: none;
+  }
+
+  .link-container a:hover {
+    color:aqua;
+  }
+
+  footer p {
+    color: #fff;
+    font-weight: 200;
+    font-size: 0.8em;
+    padding: 2rem;
+  }
